plugins {
    id 'org.springframework.boot' version "3.3.4" // Use the latest version if available
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
}

group = 'com.example' // Change to your desired group ID
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '23' // Use your desired Java version

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-webflux")
    implementation ("com.fasterxml.jackson.core:jackson-databind")
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql:42.3.3'
    developmentOnly("org.springframework.boot:spring-boot-devtools")
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
